added some content

--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
     <link rel="stylesheet" href="CSS/headerAndFooter.css">
-    <link rel="stylesheet" href="CSS/mainPageStyle.css">
+    <link rel="stylesheet" href="CSS/page3.css">
 </head>
 <body>
     <header id="fixedHeader">
