new commit von Georgios

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
     <link rel="stylesheet" href="CSS/headerAndFooter.css">
-    <link rel="stylesheet" href="CSS/mainPageStyle.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <header id="fixedHeader">
@@ -19,6 +19,9 @@
         <div class="second"></div>
         <br>
         <div class="third"></div>
+        <div class="forth"></div>
+        <div class="fifth"></div>
+
     </main>
     <footer id="fixedFooter">
         <nav>
