add styling to the darkmode toggle, add coresponding css file and substructure

--- a/profile-page.html
+++ b/profile-page.html
@@ -36,6 +36,10 @@
         <h2 class="settings__heading">Settings</h2>
         <label for="settings__darkmode-toggle">Dark Mode</label>
         <input type="checkbox" id="settings__darkmode-toggle" />
+        <label
+          class="settings__darkmode-toggle--label"
+          for="settings__darkmode-toggle"
+        ></label>
       </section>
     </main>
     <footer id="fixedFooter">
