--- a/bookmark.html
+++ b/bookmark.html
@@ -21,11 +21,44 @@
           Fragen gespeichert.
         </p>
       </article>
-      <div class="first"></div>
+      <div class="first">
+        <p class="Bookmarks">😀</p>
+        <p>
+          Hier findest du deine gespeicherten Fragen. Bisher hast du keine
+          Fragen gespeichert.
+        </p>
+        <button class="Showanswer">Show Answer</button>
+        <button class="Categories" id="Button_Option1">
+          #HTML <button class="Categories">#Flexbox</button
+          ><button class="Categories">#CSS</button>
+        </button>
+      </div>
       <br />
-      <div class="second"></div>
+      <div class="second">
+        <p class="Bookmarks">😀</p>
+        <p>
+          Hier findest du deine gespeicherten Fragen. Bisher hast du keine
+          Fragen gespeichert.
+        </p>
+        <button class="Showanswer">Show Answer</button>
+        <button class="Categories" id="Button_Option2">
+          #HTML <button class="Categories">#Flexbox</button
+          ><button class="Categories">#CSS</button>
+        </button>
+      </div>
       <br />
-      <div class="third"></div>
+      <div class="third">
+        <p class="Bookmarks">😀</p>
+        <p>
+          Hier findest du deine gespeicherten Fragen. Bisher hast du keine
+          Fragen gespeichert.
+        </p>
+        <button class="Showanswer">Show Answer</button>
+        <button class="Categories" id="Button_Option3">
+          #HTML <button class="Categories">#Flexbox</button
+          ><button class="Categories">#CSS</button>
+        </button>
+      </div>
     </main>
     <footer id="fixedFooter">
       <nav>
