add custom colors, fixed size header and footer, padding top & bottom for main

--- a/profile-page.html
+++ b/profile-page.html
@@ -12,7 +12,7 @@
     <header id="fixedHeader">
       <h1>Quiz App</h1>
     </header>
-    <main>
+    <main class="main">
       <!-- here goes the main content -->
       <section class="aboutMe">
         <img
@@ -20,10 +20,10 @@
           alt="A placeholder image"
           class="aboutMe__image"
         />
-        <h2 class="aboutMe__Name">Max Doe</h2>
-        <section class="aboutMe__text">
-          <h3 class="aboutMe__text --heading">About me:</h3>
-          <p>
+        <h2 class="aboutMe__Name text">Max Doe</h2>
+        <section class="aboutMe__text text">
+          <h3 class="aboutMe__text --heading text">About me:</h3>
+          <p class="text">
             I am a young freedom-fighter for the independence of common garden
             gnomes from the evil clutches of <em>Big Garden</em>. I hope one day
             all gnomes will be free from the horrible front gardens of the
@@ -46,8 +46,8 @@
       <nav>
         <ul>
           <li><a href="index.html">🏠</a></li>
-          <li><a href="page2.html">📁</a></li>
-          <li><a href="page3.html">👨‍🦰</a></li>
+          <li><a href="bookmark.html">📁</a></li>
+          <li><a href="profile-page.html">👨‍🦰</a></li>
         </ul>
       </nav>
     </footer>
