--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
-    <link rel="stylesheet" href="CSS/headerAndFooter.css">
-    <link rel="stylesheet" href="CSS/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="CSS/headerAndFooter.css" />
+    <link rel="stylesheet" href="CSS/style.css" />
+  </head>
+  <body>
     <header id="fixedHeader">
-        <h1>Quiz App</h1>
-    </header>    
-    <main>
-        <!-- here goes the main content -->
-        <div class="first"></div>
-        <br>
-        <div class="second"></div>
-        <br>
-        <div class="third"></div>
-        <div class="forth"></div>
-        <div class="fifth"></div>
-
+      <h1>Quiz App</h1>
+    </header>
+    <main class="main">
+      <!-- here goes the main content -->
+      <div class="testcard"></div>
+      <div class="testcard"></div>
+      <div class="testcard"></div>
+      <div class="testcard"></div>
+      <div class="testcard"></div>
     </main>
     <footer id="fixedFooter">
-        <nav>
-            <ul>
-                <li><a href="index.html">🏠</a></li>
-                <li><a href="page2.html">📁</a></li>
-                <li><a href="page3.html">👨‍🦰</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="index.html">🏠</a></li>
+          <li><a href="bookmark.html">📁</a></li>
+          <li><a href="profile-page.html">👨‍🦰</a></li>
+        </ul>
+      </nav>
     </footer>
-</body>
+  </body>
 </html>
