--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header id="fixedHeader">
-      <h1>Quiz App</h1>
+      <h1>Quiz Programm</h1>
     </header>
     <main class="main">
       <!-- here goes the main content -->
@@ -19,6 +19,10 @@
       <div class="testcard"></div>
       <div class="testcard"></div>
       <div class="testcard"></div>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore
+        voluptatum blanditiis dolorem?
+      </p>
     </main>
     <footer id="fixedFooter">
       <nav>
