--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <main class="main">
       <!-- here goes the main content -->
       <div class="testcard"></div>
+      <p>Hier fehlt noch etwas. Wem fällt etwas ein?</p>
       <div class="testcard"></div>
       <div class="testcard"></div>
       <div class="testcard"></div>
