--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     </header>
     <main class="main">
       <!-- here goes the main content -->
+      <div class="quatsch">
+        <p>Look at me, im a merge conflict!</p>
+      </div>
       <div class="testcard"></div>
       <div class="testcard"></div>
       <div class="testcard"></div>
