--- a/bookmark.html
+++ b/bookmark.html
@@ -5,17 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
-    <link rel="stylesheet" href="CSS/headerAndFooter.css" />
-    <link rel="stylesheet" href="CSS/style.css" />
+    <!-- <link rel="stylesheet" href="CSS/style.css" /> -->
+    <link rel="stylesheet" href="CSS/figmaStyle.css">
   </head>
   <body>
     <header id="fixedHeader">
       <h1>Quiz App</h1>
     </header>
     <main class="main">
-      <!-- here goes the main content -->
-      <h2 class="text">Gespeicherte Fragen</h2>
-      <article>
+      <h2 class="text">Gespeicherte Fragen:</h2>
+  <!-- <article>
         <p class="text">
           Hier findest du deine gespeicherten Fragen. Bisher hast du keine
           Fragen gespeichert.
@@ -59,13 +58,13 @@
           ><button class="Categories">#CSS</button>
         </button>
       </div>
-    </main>
+    </main> -->
     <footer id="fixedFooter">
       <nav>
         <ul>
-          <li><a href="index.html">🏠</a></li>
-          <li><a href="bookmark.html">📁</a></li>
-          <li><a href="profile-page.html">👨‍🦰</a></li>
+          <li><a class="page1" href="index.html">🏠</a></li>
+          <li><a class="page2" href="bookmark.html">📁</a></li>
+          <li><a class="page3" href="profile-page.html">👨‍🦰</a></li>
         </ul>
       </nav>
     </footer>
