--- a/index.html
+++ b/index.html
@@ -5,35 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
-    <link rel="stylesheet" href="CSS/headerAndFooter.css" />
-    <link rel="stylesheet" href="CSS/style.css" />
+    <!-- <link rel="stylesheet" href="CSS/style.css" /> -->
+    <link rel="stylesheet" href="CSS/figmaStyle.css">
   </head>
   <body>
     <header id="fixedHeader">
-      <h1>Quiz Programm</h1>
+      <h1>Quiz App</h1>
     </header>
     <main class="main">
-      <!-- here goes the main content -->
-      <div class="quatsch">
-        <p>Look at me, im a merge conflict!</p>
+      <div class="questionBorder">
+        <h2 class="qHeader">Question 1</h3>
+          <hr>
+          <button class="saveButton">❎</button>
+        <!-- after clicking the button the emoji should change with ✅ using javaScript  -->
+        <div class="question">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est quaerat ratione, cum quos alias, explicabo ducimus vitae dolores beatae ut veritatis laboriosam tempora deserunt odit? Dolor sunt nihil ratione aperiam?</div>
+        <button class="buttonShowAnswer">Show Answer</button>
       </div>
-      <div class="testcard"></div>
-      <p>Hier fehlt noch etwas. Wem fällt etwas ein?</p>
-      <div class="testcard"></div>
-      <div class="testcard"></div>
-      <div class="testcard"></div>
-      <div class="testcard"></div>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore
-        voluptatum blanditiis dolorem?
-      </p>
+      <div class="questionBorder">
+        <h2 class="qHeader">Question 2</h2>
+        <hr>
+        <button class="saveButton">❎</button>
+        <!-- after clicking the button the emoji should change with ✅ using javaScript  -->
+        <div class="question">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est quaerat ratione, cum quos alias, explicabo ducimus vitae dolores beatae ut veritatis laboriosam tempora deserunt odit? Dolor sunt nihil ratione aperiam?</div>
+        <button class="buttonShowAnswer">Show Answer</button>
+      </div>
+      <div class="questionBorder">
+        <h2 class="qHeader">Question 3</h2>
+        <hr>
+        <button class="saveButton">❎</button>
+        <!-- after clicking the button the emoji should change with ✅ using javaScript  -->
+        <div class="question">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est quaerat ratione, cum quos alias, explicabo ducimus vitae dolores beatae ut veritatis laboriosam tempora deserunt odit? Dolor sunt nihil ratione aperiam?</div>
+        <button class="buttonShowAnswer">Show Answer</button>
+      </div>
     </main>
     <footer id="fixedFooter">
       <nav>
         <ul>
-          <li><a href="index.html">🏠</a></li>
-          <li><a href="bookmark.html">📁</a></li>
-          <li><a href="profile-page.html">👨‍🦰</a></li>
+          <li><a class="page1" href="index.html">🏠</a></li>
+          <li><a class="page2" href="bookmark.html">📁</a></li>
+          <li><a class="page3" href="profile-page.html">👨‍🦰</a></li>
         </ul>
       </nav>
     </footer>
