add darkmode functionality

--- a/profile-page.html
+++ b/profile-page.html
@@ -7,6 +7,7 @@
     <title>Quiz App</title>
     <link rel="stylesheet" href="CSS/headerAndFooter.css" />
     <link rel="stylesheet" href="CSS/style.css" />
+    <script src="/darkmode.js" defer></script>
   </head>
   <body>
     <header id="fixedHeader">
@@ -34,12 +35,13 @@
       </section>
       <section class="settings">
         <h2 class="settings__heading">Settings</h2>
-        <label for="settings__darkmode-toggle">Dark Mode</label>
+        <!-- <label for="settings__darkmode-toggle">Dark Mode</label>
         <input type="checkbox" id="settings__darkmode-toggle" />
         <label
           class="settings__darkmode-toggle--label"
           for="settings__darkmode-toggle"
-        ></label>
+        ></label> -->
+        <button id="button">Toggle Dark Mode</button>
       </section>
     </main>
     <footer id="fixedFooter">
