--- a/bookmark.html
+++ b/bookmark.html
@@ -7,6 +7,7 @@
     <title>Quiz App</title>
     <link rel="stylesheet" href="CSS/headerAndFooter.css" />
     <link rel="stylesheet" href="CSS/style.css" />
+    <script src="/darkmode.js" defer></script>
   </head>
   <body>
     <header id="fixedHeader">
