--- a/createcard.html
+++ b/createcard.html
@@ -7,7 +7,7 @@
     <title>Quiz App</title>
     <link rel="stylesheet" href="CSS/headerAndFooter.css" />
     <link rel="stylesheet" href="CSS/style.css" />
-    <script src="./new-card.js" defer></script>
+    <script src="./JS/input.js" defer></script>
   </head>
   <body>
     <header id="fixedHeader">
@@ -22,7 +22,7 @@
           rows="7"
           name="question"
           maxlength="150"
-          data-js="input-question"
+          data-js="question"
         ></textarea>
 
         <label for="answer">Antwort:</label>
@@ -31,17 +31,17 @@
           rows="7"
           name="answer"
           maxlength="150"
-          data-js="input-answer"
+          data-js="answer"
         ></textarea>
 
         <label for="tags">Tags:</label>
-        <input id="tags" type="text" name="tags" data-js="input-tag" />
+        <input id="tags" type="text" name="tags" data-js="tag" />
         <button class="form__submit-button" type="submit">
           Frage hinzufügen
         </button>
       </form>
 
-      <ul class="card-list" data-js="card-container"></ul>
+      <section class="card-list" data-js="card-container"></section>
     </main>
     <footer id="fixedFooter">
       <nav>
