created index.js and bookmark.js, changed icon for bookmark, created function to switch bookmakrs

--- a/bookmark.html
+++ b/bookmark.html
@@ -7,6 +7,8 @@
     <title>Quiz App</title>
     <link rel="stylesheet" href="CSS/headerAndFooter.css" />
     <link rel="stylesheet" href="CSS/style.css" />
+    <script src="/JS/index.js"></script>
+    <script type="module" src="/JS/bookmark.js"></script>
   </head>
   <body>
     <header id="fixedHeader">
@@ -22,7 +24,12 @@
         </p>
       </article>
       <div class="first">
-        <p class="Bookmarks">😀</p>
+        <img
+          src="/icons/lesezeichen-weiss.png"
+          alt="Bookmark this question"
+          class="bookmarks_unclicked"
+          data-js="bookmark"
+        />
         <p>
           Hier findest du deine gespeicherten Fragen. Bisher hast du keine
           Fragen gespeichert.
@@ -35,7 +42,12 @@
       </div>
       <br />
       <div class="second">
-        <p class="Bookmarks">😀</p>
+        <img
+          src="/icons/lesezeichen-weiss.png"
+          alt="Bookmark this question"
+          class="bookmarks_unclicked"
+          data-js="bookmark"
+        />
         <p>
           Hier findest du deine gespeicherten Fragen. Bisher hast du keine
           Fragen gespeichert.
@@ -48,7 +60,12 @@
       </div>
       <br />
       <div class="third">
-        <p class="Bookmarks">😀</p>
+        <img
+          src="/icons/lesezeichen-weiss.png"
+          alt="Bookmark this question"
+          class="bookmarks_unclicked"
+          data-js="bookmark"
+        />
         <p>
           Hier findest du deine gespeicherten Fragen. Bisher hast du keine
           Fragen gespeichert.
