--- a/profile-page.html
+++ b/profile-page.html
@@ -7,6 +7,8 @@
     <title>Quiz App</title>
     <link rel="stylesheet" href="CSS/headerAndFooter.css" />
     <link rel="stylesheet" href="CSS/style.css" />
+    <script src="/JS/index.js"></script>
+    <script type="module" src="/JS/bookmark.js"></script>
   </head>
   <body>
     <header id="fixedHeader">
