added hide function to hide-question-button

--- a/bookmark.html
+++ b/bookmark.html
@@ -30,11 +30,13 @@
           class="bookmarks_unclicked"
           data-js="bookmark"
         />
-        <p>
+        <p class="hidden" data-js="question_text">
           Hier findest du deine gespeicherten Fragen. Bisher hast du keine
           Fragen gespeichert.
         </p>
-        <button class="Showanswer">Show Answer</button>
+        <button class="Showanswer" data-js="showanswer_button">
+          Show Answer
+        </button>
         <button class="Categories" id="Button_Option1">
           #HTML <button class="Categories">#Flexbox</button
           ><button class="Categories">#CSS</button>
