--- a/bookmark.html
+++ b/bookmark.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
-    
-    
-    <script src="/darkmode.js" defer></script>
+
+    <script src="/JS/darkmode.js" defer></script>
 
     <!-- <link rel="stylesheet" href="CSS/style.css" /> -->
-    <link rel="stylesheet" href="CSS/figmaStyle.css">
+    <link rel="stylesheet" href="CSS/figmaStyle.css" />
   </head>
   <body>
     <header id="fixedHeader">
@@ -18,7 +17,7 @@
     </header>
     <main class="main">
       <h2 class="text">Gespeicherte Fragen:</h2>
-  <article>
+      <article>
         <p class="text">
           Hier findest du deine gespeicherten Fragen. Bisher hast du keine
           Fragen gespeichert.
@@ -63,7 +62,7 @@
           ><button class="Categories">#CSS</button>
         </button>
       </div>
-    </main> 
+    </main>
     <footer id="fixedFooter">
       <nav>
         <ul>
@@ -74,6 +73,14 @@
           </li>
           <li>
             <a href="bookmark.html"
+              ><img
+                src="icons/archiv-black-box.png"
+                alt="Bookmarks"
+                class="icon"
+            /></a>
+          </li>
+          <li>
+            <a href="createcard.html"
               ><img
                 src="icons/archiv-black-box.png"
                 alt="Bookmarks"
