--- a/createcard.html
+++ b/createcard.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
-    <link rel="stylesheet" href="CSS/headerAndFooter.css" />
-    <link rel="stylesheet" href="CSS/style.css" />
+    <!-- <link rel="stylesheet" href="CSS/headerAndFooter.css" />
+    <link rel="stylesheet" href="CSS/style.css" /> -->
+    <link rel="stylesheet" href="CSS/figmaStyle.css" />
+    <script src="/JS/darkmode.js" defer></script>
     <script src="./JS/input.js" defer></script>
   </head>
   <body>
@@ -60,7 +62,7 @@
             /></a>
           </li>
           <li>
-            <a href="form.html"
+            <a href="createcard.html"
               ><img
                 src="icons/archiv-black-box.png"
                 alt="Bookmarks"
