--- a/profile-page.html
+++ b/profile-page.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
 
-    <script src="/darkmode.js" defer></script>
+    <script src="/JS/darkmode.js" defer></script>
 
     <!-- <link rel="stylesheet" href="CSS/style.css" /> -->
-    <link rel="stylesheet" href="CSS/components/darkmode-toggle.css">
-    <link rel="stylesheet" href="CSS/figmaStyle.css">
+    <link rel="stylesheet" href="CSS/components/darkmode-toggle.css" />
+    <link rel="stylesheet" href="CSS/figmaStyle.css" />
   </head>
-  <body style="height: 734px;">
+  <body style="height: 734px">
     <header id="fixedHeader">
       <h1>Quiz App</h1>
     </header>
@@ -34,12 +34,16 @@
             Quizea? Whatever...
           </p>
         </section>
-        <br>
+        <br />
         <div class="savedQuestions">
-          <span class="quest grid"><span class=" addOrRemoveQ grid">Q</span>3</span>
-          <span class="savedQuest grid"><span class="addOrRemoveSavedQ grid">✅</span>0</span>
+          <span class="quest grid"
+            ><span class="addOrRemoveQ grid">Q</span>3</span
+          >
+          <span class="savedQuest grid"
+            ><span class="addOrRemoveSavedQ grid">✅</span>0</span
+          >
         </div>
-        <br>
+        <br />
       </section>
       <section class="settings">
         <h2 class="settings__heading">Settings</h2>
@@ -65,6 +69,14 @@
           </li>
           <li>
             <a href="bookmark.html"
+              ><img
+                src="icons/archiv-black-box.png"
+                alt="Bookmarks"
+                class="icon"
+            /></a>
+          </li>
+          <li>
+            <a href="createcard.html"
               ><img
                 src="icons/archiv-black-box.png"
                 alt="Bookmarks"
