--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
-    <script src="/darkmode.js" defer></script>
+    <script src="/JS/darkmode.js" defer></script>
     <!-- <link rel="stylesheet" href="CSS/style.css" /> -->
     <link rel="stylesheet" href="CSS/figmaStyle.css">
 
@@ -45,7 +45,14 @@
         <ul>
           <li><a href="index.html"><img src="icons/zuhause.png" alt="Home" class="icon"></a></li>
           <li><a href="bookmark.html"><img src="icons/archiv-black-box.png" alt="Bookmarks" class="icon"></a></li>
-          <li><a href="form.html"><img src="icons/archiv-black-box.png" alt="Bookmarks" class="icon"></a></li>
+          <li>
+            <a href="createcard.html"
+              ><img
+                src="icons/archiv-black-box.png"
+                alt="Bookmarks"
+                class="icon"
+            /></a>
+          </li>
           <li><a href="profile-page.html"><img src="icons/benutzerform.png" alt="Profile" class="icon"></a></li>
         </ul>
       </nav>
