add new icons, implement add card icon

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           <li>
             <a href="createcard.html"
               ><img
-                src="icons/archiv-black-box.png"
-                alt="Bookmarks"
+              src="icons/add-card.png"
+              alt="Write new questions"
                 class="icon"
             /></a>
           </li>
