--- a/bookmark.html
+++ b/bookmark.html
@@ -102,8 +102,8 @@
           <li>
             <a href="createcard.html"
               ><img
-                src="icons/archiv-black-box.png"
-                alt="Bookmarks"
+                src="icons/add-card.png"
+                alt="Write new questions"
                 class="icon"
             /></a>
           </li>
