--- a/createcard.html
+++ b/createcard.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
-    <!-- <link rel="stylesheet" href="CSS/headerAndFooter.css" />
-    <link rel="stylesheet" href="CSS/style.css" /> -->
+    <!-- <link rel="stylesheet" href="CSS/headerAndFooter.css" /> -->
+    <link rel="stylesheet" href="CSS/style.css" />
     <link rel="stylesheet" href="CSS/figmaStyle.css" />
     <script src="/JS/darkmode.js" defer></script>
     <script src="./JS/input.js" defer></script>
@@ -64,8 +64,8 @@
           <li>
             <a href="createcard.html"
               ><img
-                src="icons/archiv-black-box.png"
-                alt="Bookmarks"
+                src="icons/add-card.png"
+                alt="Write new questions"
                 class="icon"
             /></a>
           </li>
